# photon-cruncher

./: .gitignore  LICENSE  README.md
.github/workflows/: build-desktop-apps.yml
docs/: architecture-aurora.md
docs/plans/: 2026-07-23-backend-optimization.md
packaging/macos/: PhotonCruncher.spec  PhotonCruncherAurora.spec
packaging/windows/: PhotonCruncher.spec
photometry_app/: README.md  main.py  model.py  pyproject.toml
photometry_app/analysis/: runner.py
photometry_app/export/: exporter.py
photometry_app/gui/: main_window.py
photometry_app/io/: loader.py
photometry_app/photometry_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
photometry_app/processing/: pipeline.py
photon_cruncher/: README.md  __init__.py  aurora_main.py  cli.py  main.py  product.py  pyproject.toml  service.py
photon_cruncher/analysis/: runner.py  trial_classifier.py
photon_cruncher/assets/icons/: photon-cruncher-aurora.icns  photon-cruncher.icns
photon_cruncher/export/: exporter.py
photon_cruncher/gui/: main_window.py
photon_cruncher/gui_aurora/: __init__.py  __main__.py  server.py  session_store.py  shell.py
photon_cruncher/gui_aurora/static/: index.html
photon_cruncher/gui_aurora/static/css/: aurora.css
photon_cruncher/gui_aurora/static/js/: app.js  plots.js
photon_cruncher/gui_prototype/: __init__.py  __main__.py  app.py  components.py  demo_data.py  plots.py  shell.py  theme.py
photon_cruncher/gui_prototype/pages/: __init__.py  align_page.py  batch_page.py  data_page.py  trials_page.py
photon_cruncher/io/: loader.py
photon_cruncher/photon_cruncher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
photon_cruncher/processing/: pipeline.py
photon_cruncher/tests/: test_aurora_app.py  test_aurora_shell.py  test_gui_aurora.py  test_gui_prototype.py  test_loader.py  test_pipeline_equivalence.py  test_service.py
photon_cruncher/tests/fixtures/: golden_process_channel.npz
scripts/: bench_backend.py  build_macos_app.sh  build_macos_aurora_app.sh  build_windows_app.ps1
