[project]
name = "photometry_app"
version = "0.1.0"
description = "Fiber photometry analysis suite with MATLAB-faithful preprocessing."
requires-python = ">=3.11"
readme = "../README.md"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "pandas>=2.0",
    "PySide6>=6.6",
]

[project.scripts]
photometry-app = "photometry_app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
