[project]
name = "photon-cruncher"
version = "0.1.0"
description = "Fiber photometry analysis suite with MATLAB-faithful preprocessing."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "pandas>=2.0",
    "PySide6>=6.6",
    "matplotlib>=3.8",
]

[project.scripts]
photon-cruncher = "photon_cruncher.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "photon_cruncher" = "." }
packages = [
    "photon_cruncher",
    "photon_cruncher.analysis",
    "photon_cruncher.export",
    "photon_cruncher.gui",
    "photon_cruncher.io",
    "photon_cruncher.processing",
    "photon_cruncher.tests",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
