[project]
name = "photon-cruncher"
version = "1.1.4"
description = "Fiber photometry analysis suite with MATLAB-faithful preprocessing."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "pandas>=2.0",
    "PySide6>=6.6",
    "matplotlib>=3.8",
    "tdt>=0.7.3",
]

[project.optional-dependencies]
macos = ["pyobjc"]
build = ["pyinstaller>=6.0"]
prototype = ["pyqtgraph==0.14.0"]

[project.scripts]
photon-cruncher = "photon_cruncher.main:main"
photon-cruncher-cli = "photon_cruncher.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "photon_cruncher" = "." }
packages = [
    "photon_cruncher",
    "photon_cruncher.analysis",
    "photon_cruncher.export",
    "photon_cruncher.gui",
    "photon_cruncher.gui_prototype",
    "photon_cruncher.gui_prototype.pages",
    "photon_cruncher.io",
    "photon_cruncher.processing",
    "photon_cruncher.tests",
]

[tool.setuptools.package-data]
"photon_cruncher.gui_prototype" = ["assets/*.svg"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
