[project]
name = "photon-cruncher"
version = "2.0.0"
description = "Fiber photometry analysis suite with MATLAB-faithful preprocessing (Aurora desktop)."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "numpy>=1.25",
    "scipy>=1.11",
    "pandas>=2.0",
    "PySide6>=6.6",
    "matplotlib>=3.8",
    "tdt>=0.7.3",
]

[project.optional-dependencies]
macos = ["pyobjc"]
build = ["pyinstaller>=6.0", "PySide6-WebEngine>=6.6"]

[project.scripts]
photon-cruncher = "photon_cruncher.aurora_main:main"
photon-cruncher-cli = "photon_cruncher.cli:main"
photon-cruncher-aurora = "photon_cruncher.aurora_main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "photon_cruncher" = "." }
packages = [
    "photon_cruncher",
    "photon_cruncher.analysis",
    "photon_cruncher.export",
    "photon_cruncher.gui_aurora",
    "photon_cruncher.io",
    "photon_cruncher.processing",
    "photon_cruncher.tests",
]

[tool.setuptools.package-data]
"photon_cruncher.gui_aurora" = [
    "static/*",
    "static/css/*",
    "static/js/*",
    "static/img/*",
]
"photon_cruncher" = [
    "assets/icons/*",
    "assets/icons/png/*",
    "assets/icons/aurora-options/*",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
